--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-lambpy/src/.ipynb_checkpoints
-lambpy/src/.idea/
-lambpy/.idea/
+lampy/src/.ipynb_checkpoints
+lampy/src/.idea/
+lampy/.idea/
 .idea/
